samples/_failures_safe/1761253258_02bfd1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_55b4bf03.c: In function ‘main’:
./samples/SAFE/__tmp_55b4bf03.c:178:9: error: expected expression at end of input
  178 |         {2, 4, 1}, {
      |         ^
./samples/SAFE/__tmp_55b4bf03.c:178:9: error: expected declaration or statement at end of input
